--- a/Templates/teste.html
+++ b/Templates/teste.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -10,8 +9,16 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="moda.css">
+    
 </head>
 <body>
+    <div class="welcome-message" id="welcome-message">
+        Bem-vindo ao nosso site de recomendações de roupas!
+    </div>
+
+    
+
+
     <div class="header">
         <h1>Pesquise <span>Aqui</span></h1>
     </div>
@@ -31,43 +38,57 @@
         <!-- Produtos serão inseridos aqui dinamicamente -->
     </div>
 
-    <img src="logo.jpg" alt="Logo" class="logo">
+    <img src="./images/logo.jpg" alt="Logo" class="logo">
+
+
+    <div class="carousel" id="carousel">
+        <!-- Imagens do carrossel serão inseridas aqui dinamicamente -->
+    </div>
+
+    
+
 
     <script>
         const products = [
             {
-                name: 'Blusa Branca',
-                image: 'blusa branca.png',
+                name: 'Blusa Azul1',
+                image: './images/blusa azul.jpg',
+                link: 'login.html'
+            },
+        
+            {
+                name: 'Calça Azul2',
+                image: './images/calça azul3.jpg',
                 link: 'login.html'
             },
             {
-                name: 'Blusa Preta',
-                image: 'blusa preta.png',
+                name: 'Calça azul3',
+                image: './images/calça azul2.jpg',
                 link: 'login.html'
             },
             {
-                name: 'Calça Preta',
-                image: 'calça preta.png',
-                link: 'login.html'
-            },
-       
-            {
-                name: 'Blusa Branca',
-                image: 'blusa branca.png',
+                name: 'Camisa Azul2',
+                image: './images/camisa azul2.jpg',
                 link: 'login.html'
             },
             {
-                name: 'tenis branco F1',
-                image: 'tenis branco F1',
+                name: 'Camisa Polo Azul1',
+                image: './images/camisa polo azul1.jpg',
                 link: 'login.html'
             },
             {
-                name: 'Calça Preta',
-                image: 'calça preta.png',
+                name: 'Camisa Polo azul2 ',
+                image: './images/Camisa polo azul2.jpg',
                 link: 'login.html'
-            }
-        ];
-
+            },
+            {
+                name: 'Camisa Polo vermelho1',
+                image: './images/camisa polo azul.jpg',
+                link: 'login.html'
+            },
+        
+    
+    ];
     
 
 
@@ -108,7 +129,17 @@
 
         // Mostrar todos os produtos inicialmente
         displayProducts(products);
+
+
+        // Aplicar a classe fade-out após 3 segundos
+        setTimeout(() => {
+            document.getElementById('welcome-message').classList.add('fade-out');
+        }, 3000);
+
+
     </script>
+
+        
+    
 </body>
 </html>
-
