--- a/static/css/moda.css
+++ b/static/css/moda.css
@@ -6,7 +6,7 @@ body {
     text-align: center;
 }
 .header, .welcome-message {
-    background-color: #333;
+    background-color: #d3d3d3;
     color: white;
     padding: 20px;
 }
@@ -32,13 +32,16 @@ body {
     justify-content: center;
 }
 .product {
-    background: white;
-    border: 1px solid #ddd;
-    border-radius: 5px;
+    background-color: rgb(255, 255, 255);
+    text-align: center;
+    box-shadow: rgba(172, 98, 98, 0.1) 0px 0px 40px;
+    width: 230px;
     margin: 10px;
-    padding: 10px;
-    width: 200px;
-}
+    border-radius: 50px;
+    overflow: hidden;
+    transition: transform 0.2s ease 0s;
+    }
+
 .product img {
     max-width: 100%;
     border-bottom: 1px solid #ddd;
@@ -51,4 +54,62 @@ body {
 .fade-out {
     opacity: 0;
     transition: opacity 2s;
+}
+.logo{
+position: absolute;
+top: 20px;
+right: 20px;
+width: 150px;
+}
+
+
+
+
+
+
+
+.search-bar button {
+    background-color: #ff0101;
+    padding: 13px;
+    border-radius: 70px;
+    margin-left: -50px;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+}
+
+.search-bar button:hover {
+    background-color: #ca0000; /* Cor do botão ao passar o mouse */
+}
+
+.search-bar {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0;
+}
+
+.search-bar input {
+    width: 300px;
+    padding: 10px;
+    border: 2px solid #f11111; /* Cor da borda inicial vermelha */
+    border-radius: 30px;
+    color: #ff0303;
+    transition: all 0.2s ;
+    font-family: 'Playwrite GB S', sans-serif; /* Aplicando a fonte Playwrite GB S no input */
+}
+
+.search-bar input:focus {
+    width: 350px;
+    border-color: #ff0303; /* Cor da borda ao focar (vermelho mais escuro) */
+}
+.product button {
+    background-color: #f32525;
+    color: white;
+    border: none;
+    border-radius: 20px;
+    padding: 10px 10px; /* Espaçamento interno ajustado */
+    width: 65%;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin: 20px auto; /* Centralizado verticalmente */
+    display: block; /* Para ocupar toda a largura disponível */
 }
