--- a/static/css/moda.css
+++ b/static/css/moda.css
@@ -6,12 +6,12 @@ body {
     text-align: center;
 }
 .header, .welcome-message {
-    background-color: #d3d3d3;
-    color: white;
+    background-color: #d9d9d9;
+    color: black;
     padding: 20px;
 }
 .header h1 span {
-    color: #ff6347;
+    color: #ea1d1d;
 }
 .search-bar, .upload-form {
     margin: 20px auto;
@@ -34,7 +34,7 @@ body {
 .product {
     background-color: rgb(255, 255, 255);
     text-align: center;
-    box-shadow: rgba(172, 98, 98, 0.1) 0px 0px 40px;
+    box-shadow: #ccc 0px 0px 40px;
     width: 230px;
     margin: 10px;
     border-radius: 50px;
@@ -45,7 +45,7 @@ body {
 .product img {
     max-width: 100%;
     border-bottom: 1px solid #ddd;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 .no-results {
     color: red;
@@ -63,22 +63,17 @@ width: 150px;
 }
 
 
-
-
-
-
-
 .search-bar button {
-    background-color: #ff0101;
+    background-color: #ffffff;
     padding: 13px;
     border-radius: 70px;
-    margin-left: -50px;
+    margin-left: -40px;
     cursor: pointer;
     transition: background-color 0.2s ease;
 }
 
 .search-bar button:hover {
-    background-color: #ca0000; /* Cor do botão ao passar o mouse */
+    background-color: #f64d4d; /* Cor do botão ao passar o mouse */
 }
 
 .search-bar {
@@ -90,9 +85,9 @@ width: 150px;
 .search-bar input {
     width: 300px;
     padding: 10px;
-    border: 2px solid #f11111; /* Cor da borda inicial vermelha */
+    border: 2px solid #080808; /* Cor da borda inicial vermelha */
     border-radius: 30px;
-    color: #ff0303;
+    color: #060606;
     transition: all 0.2s ;
     font-family: 'Playwrite GB S', sans-serif; /* Aplicando a fonte Playwrite GB S no input */
 }
@@ -113,3 +108,18 @@ width: 150px;
     margin: 20px auto; /* Centralizado verticalmente */
     display: block; /* Para ocupar toda a largura disponível */
 }
+
+
+/* CSS para padronizar o tamanho das imagens */
+.products .product img {
+    width: 300px;  /* Defina a largura desejada */
+    height: 300px; /* Defina a altura desejada */
+    object-fit: cover; /* Mantém o aspecto da imagem enquanto cobre a área definida */
+    border: 1px solid #ccc; /* Opcional: Adiciona uma borda fina para as imagens */
+    border-radius: 10px; /* Opcional: Adiciona cantos arredondados */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Opcional: Adiciona uma sombra sutil */
+}
+
+/* Outras regras CSS que você já possui */
+
+
